[package]
name = "cargo-factorio"
version = "0.2.0"
edition = "2024"
description = "Cargo subcommand to zip and install Factorio mods (correct structure, cross-platform)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/cargo-factorio"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo-subcommand", "factorio", "modding", "zip"]
# Publish only the subcommand’s source; avoid bundling large assets
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = { version = "4", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"